--- a/lib/plausible_web/templates/stats/stats.html.eex
+++ b/lib/plausible_web/templates/stats/stats.html.eex
@@ -1,7 +1,15 @@
 <div class="pt-12"></div>
 <div class="container pb-32" data-site-domain="<%= @site.domain %>">
   <div class="w-full sm:flex justify-between items-center">
-    <h2 class="text-center sm:text-left sm:mr-8">Analytics for <%= link(@site.domain, to: "//" <> @site.domain, target: "_blank") %></h2>
+    <div class="w-full sm:flex items-center">
+      <h2 class="text-center sm:text-left sm:mr-8">Analytics for <%= link(@site.domain, to: "//" <> @site.domain, target: "_blank") %></h2>
+      <div class="text-sm font-bold text-grey-darker">
+        <svg class="w-2 mr-1 fill-current text-green" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
+          <circle cx="8" cy="8" r="8"/>
+        </svg>
+        <span id="current-visitors"><%= @current_visitors %></span> current visitors
+      </div>
+    </div>
     <div class="mt-4 sm:mt-0">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
       <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
