--- a/lib/plausible_web/templates/email/weekly_report.html.eex
+++ b/lib/plausible_web/templates/email/weekly_report.html.eex
@@ -278,11 +278,11 @@ body {
                               </div>
                             <% @change_pageviews >= 0 -> %>
                               <div style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 12px; line-height: 14px; color: #1f9d55;">
-                                <p style="font-size: 12px; line-height: 14px; text-align: left; margin: 0;"><strong><%= @change_pageviews %>%</strong></p>
+                                <p style="font-size: 12px; line-height: 14px; text-align: left; margin: 0;"><strong>+<%= @change_pageviews %>%</strong></p>
                               </div>
                             <% @change_pageviews < 0 -> %>
                               <div style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 12px; line-height: 14px; color: #ff4457;">
-                                <p style="font-size: 12px; line-height: 14px; text-align: left; margin: 0;"><strong><%= @change_pageviews %>%</strong></p>
+                                <p style="font-size: 12px; line-height: 14px; text-align: left; margin: 0;"><strong>-<%= @change_pageviews %>%</strong></p>
                               </div>
                           <% end %>
                         </div>
