--- a/lib/plausible_web/templates/page/index.html.eex
+++ b/lib/plausible_web/templates/page/index.html.eex
@@ -50,7 +50,7 @@
       <%= link("View live demo", to: "/plausible.io", class: "button button-outline w-full sm:w-auto mt-4 md:mt-0") %>
     </section>
   </div>
-  <div class="pt-12 lg:pt-24"></div>
+  <div class="pt-12 lg:pt-16"></div>
   <div class="lg:pt-24"></div>
   <div class="container relative mt-32">
     <h2 class="font-black">Why Plausible?</h2>
@@ -59,7 +59,7 @@
     Here’s what makes it different from other solutions
     </p>
   </div>
-  <div class="container mt-6">
+  <div class="container mt-12">
     <div class="flex flex-col md:flex-row items-center justify-between mx-auto leading-normal">
       <div class="w-full md:w-1/3 py-6 md:px-6 md:pl-0">
         <svg class="w-6 h-6 mr-1 text-indigo" style="transform: translateY(0.3rem);">
@@ -88,6 +88,40 @@
         <h3 class="inline">Open source</h3>
         <p class="text-lg mt-2">
         Plausible is fully open source and <%= link("available on Github", to: "https://github.com/plausible-insights/plausible", class: "text-indigo") %>. Feel free to check out the code and <%= link("read in depth about our data policy", to: "/data-policy", class: "text-indigo") %>
+        </p>
+      </div>
+
+    </div>
+  </div>
+  <div class="container mt-6">
+    <div class="flex flex-col md:flex-row items-center justify-between mx-auto leading-normal">
+      <div class="w-full md:w-1/3 py-6 md:px-6 md:pl-0">
+        <svg class="w-6 h-6 mr-1 text-indigo" style="transform: translateY(0.3rem);">
+          <use xlink:href="#feather-check-circle" />
+        </svg>
+        <h3 class="inline">Email reports</h3>
+        <p class="text-lg mt-2">
+          Keep an eye on your traffic with a weekly email report including pageviews, visitor numbers, top pages and top referrers for the week.
+        </p>
+      </div>
+
+      <div class="w-full md:w-1/3 py-6 md:px-6">
+        <svg class="w-6 h-6 mr-1 text-indigo" style="transform: translateY(0.3rem);">
+          <use xlink:href="#feather-check-circle" />
+        </svg>
+        <h3 class="inline">Search keywords</h3>
+        <p class="text-lg mt-2">
+          Integrate your dashboard with Google Search Console to get the most accurate reporting on your search keywords.
+        </p>
+      </div>
+
+      <div class="w-full md:w-1/3 py-6 md:px-6 md:pr-0">
+        <svg class="w-6 h-6 mr-1 text-indigo" style="transform: translateY(0.3rem);">
+          <use xlink:href="#feather-check-circle" />
+        </svg>
+        <h3 class="inline">SPA support</h3>
+        <p class="text-lg mt-2">
+          Plausible is built with modern web frameworks in mind and it works automatically with any pushState based router on the frontend.
         </p>
       </div>
 
