Improve landing page pricing structure

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -51,6 +51,16 @@ blockquote {
   }
 }
 
+.pricing-table {
+  height: 920px;
+}
+
+@screen md {
+  .pricing-table {
+    height: auto;
+  }
+}
+
 @tailwind utilities;
 
 a {
