--- a/lib/plausible_web/templates/page/index.html.eex
+++ b/lib/plausible_web/templates/page/index.html.eex
@@ -138,52 +138,129 @@
       <div class="pt-32"></div>
       <div class="pt-32"></div>
 
-      <div class="bg-white w-full md:w-2/3 rounded-lg absolute pin-l shadow-lg z-50" style="top: 200px;">
-        <header class="bg-grey-lightest p-6 rounded-t-lg">
-          <div class="uppercase font-bold text-indigo-dark">Pricing Plans</div>
-        </header>
-        <div class="rounded-b-lg p-6 text-indigo-darkest">
-          <div class="pb-6 leading-normal">
-            Track unlimited websites with all plans. Billing is based on the total monthly pageviews of the website(s) you're tracking
-          </div>
-          <div class="w-full flex justify-between items-center pb-4">
-            <span class="uppercase text-grey-dark text-sm font-bold">Plan</span>
-            <span class="uppercase text-grey-dark text-sm font-bold">Pageviews</span>
-            <span class="uppercase text-grey-dark text-sm font-bold">Price</span>
-          </div>
-          <div class="w-full flex justify-between items-center py-4 border-t">
-            <span>Personal</span>
-            <span><b>10k</b> / mo</span>
-            <b class="bg-orange-lighter text-orange-darkest p-1 rounded-sm">$6 / mo</b>
-          </div>
-          <div class="w-full flex justify-between items-center py-4 border-t">
-            <span>Startup</span>
-            <span><b>100k</b> / mo</span>
-            <b class="bg-orange-lighter text-orange-darkest p-1 rounded-sm">$12 / mo</b>
-          </div>
-          <div class="w-full flex justify-between items-center py-4 border-t">
-            <span>Business</span>
-            <span><b>1m</b> / mo</span>
-            <b class="bg-orange-lighter text-orange-darkest p-1 rounded-sm">$36 / mo</b>
-          </div>
-          <%= link("Start free trial →", to: "/register", class: "button mt-6") %>
-          <div class="text-sm text-grey-darker mt-2">No credit card required up front. Cancel anytime.</div>
-        </div>
-      </div>
-
-      <div class="hidden md:block bg-white w-1/3 rounded-lg rounded-l-none absolute pin-r shadow" style="top: 300px;">
-        <div class="rounded-b-lg p-6">
-          <svg style="width: 20px; height: 20px; margin-right: 2px; transform: translateY(0.2rem);" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#8795a1" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-info"><circle cx="12" cy="12" r="10"/><line x1="12" y1="16" x2="12" y2="12"/><line x1="12" y1="8" x2="12" y2="8"/></svg>
-          <h3 class="text-indigo-dark inline">If you’re not paying for the product, you are the product</h3>
-          <div class="mt-6 leading-normal">
-            Plausible does not sell your data or use it to follow people around with ads. Instead, we ask a small monthly fee to keep the servers running.
-          </div>
-
-        </div>
-      </div>
-
     </div>
   </div>
+  <div class="relative w-full pricing-table">
+    <div class="absolute w-full" style="top: -330px;">
+      <div class="container px-0 flex flex-col md:flex-row justify-between items-center">
+
+        <div class="flex-1 w-full my-4 md:w-auto px-4">
+          <div class="bg-white rounded-lg shadow-lg z-50">
+            <header class="bg-grey-lightest p-6 rounded-t-lg">
+              <div class="uppercase font-bold text-indigo-dark">Hobby</div>
+            </header>
+            <div class="rounded-b-lg p-6 text-indigo-darkest">
+              <div class="pb-2">
+                <b class="text-3xl font-black">$6</b>
+                <div class="text-grey-dark text-lg font-bold">per month</div>
+              </div>
+              <div class="my-4 font-medium">
+                <svg class="feather mr-1 text-indigo"><use xlink:href="#feather-check-circle" /></svg>
+                <span>Up to 10k pageviews/mo</span>
+              </div>
+
+              <div class="my-4 font-medium">
+                <svg class="feather mr-1 text-indigo"><use xlink:href="#feather-check-circle" /></svg>
+                <span>Unlimited websites</span>
+              </div>
+
+              <div class="my-4 font-medium">
+                <svg class="feather mr-1 text-indigo"><use xlink:href="#feather-check-circle" /></svg>
+                <span>100% data ownership</span>
+              </div>
+
+              <div class="my-4 font-medium">
+                <svg class="feather mr-1 text-indigo"><use xlink:href="#feather-check-circle" /></svg>
+                <span>Email support</span>
+              </div>
+
+              <div class="w-full text-center">
+                <%= link("Start free trial →", to: "/register", class: "button mt-6 inline-block") %>
+                <div class="my-2 text-sm text-grey-darker">No credit card required</div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="flex-1 w-full my-4 md:w-auto px-4">
+          <div class="bg-white rounded-lg shadow-lg z-50">
+            <header class="bg-grey-lightest p-6 rounded-t-lg">
+              <div class="uppercase font-bold text-indigo-dark">Startup</div>
+            </header>
+            <div class="rounded-b-lg p-6 text-indigo-darkest">
+              <div class="pb-2">
+                <b class="text-3xl font-black">$12</b>
+                <div class="text-grey-dark text-lg font-bold">per month</div>
+              </div>
+              <div class="my-4 font-medium">
+                <svg class="feather mr-1 text-indigo"><use xlink:href="#feather-check-circle" /></svg>
+                <span>Up to 100k pageviews/mo</span>
+              </div>
+
+              <div class="my-4 font-medium">
+                <svg class="feather mr-1 text-indigo"><use xlink:href="#feather-check-circle" /></svg>
+                <span>Unlimited websites</span>
+              </div>
+
+              <div class="my-4 font-medium">
+                <svg class="feather mr-1 text-indigo"><use xlink:href="#feather-check-circle" /></svg>
+                <span>100% data ownership</span>
+              </div>
+
+              <div class="my-4 font-medium">
+                <svg class="feather mr-1 text-indigo"><use xlink:href="#feather-check-circle" /></svg>
+                <span>Priority support</span>
+              </div>
+
+              <div class="w-full text-center">
+                <%= link("Start free trial →", to: "/register", class: "button mt-6 inline-block") %>
+                <div class="my-2 text-sm text-grey-darker">No credit card required</div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="flex-1 w-full my-4 md:w-auto px-4">
+          <div class="bg-white rounded-lg shadow-lg z-50">
+            <header class="bg-grey-lightest p-6 rounded-t-lg">
+              <div class="uppercase font-bold text-indigo-dark">Business</div>
+            </header>
+            <div class="rounded-b-lg p-6 text-indigo-darkest">
+              <div class="pb-2">
+                <b class="text-3xl font-black">$36</b>
+                <div class="text-grey-dark text-lg font-bold">per month</div>
+              </div>
+              <div class="my-4 font-medium">
+                <svg class="feather mr-1 text-indigo"><use xlink:href="#feather-check-circle" /></svg>
+                <span>Up to 1m pageviews/mo</span>
+              </div>
+
+              <div class="my-4 font-medium">
+                <svg class="feather mr-1 text-indigo"><use xlink:href="#feather-check-circle" /></svg>
+                <span>Unlimited websites</span>
+              </div>
+
+              <div class="my-4 font-medium">
+                <svg class="feather mr-1 text-indigo"><use xlink:href="#feather-check-circle" /></svg>
+                <span>100% data ownership</span>
+              </div>
+
+              <div class="my-4 font-medium">
+                <svg class="feather mr-1 text-indigo"><use xlink:href="#feather-check-circle" /></svg>
+                <span>Priority support</span>
+              </div>
+
+              <div class="w-full text-center">
+                <%= link("Start free trial →", to: "/register", class: "button mt-6 inline-block") %>
+                <div class="my-2 text-sm text-grey-darker">No credit card required</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="pt-16"></div>
   <div class="container my-32">
     <h3 class="font-black text-center text-2xl my-12">What people are saying</h3>
