--- a/lib/plausible_web/templates/site/settings.html.eex
+++ b/lib/plausible_web/templates/site/settings.html.eex
@@ -95,14 +95,14 @@
 </div>
 
 <div class="max-w-md mx-auto bg-white shadow-md rounded rounded-t-none border-t-2 border-indigo-lightest px-8 pt-6 pb-8 mt-10" id="google-auth">
-  <div class="flex items-center justify-between">
+  <div>
     <h2>Email reports</h2>
   </div>
 
   <div class="my-4 border-b border-grey-light"></div>
 
-  <div class="my-4 flex items-center">
-    <%= if @weekly_report_enabled do %>
+  <div class="my-8 flex items-center">
+    <%= if @report_changeset do %>
       <%= button(to: "/sites/#{@site.domain}/email-report/disable", method: :post, class: "border rounded-full border-grey flex items-center cursor-pointer w-8 bg-green justify-end") do %>
         <span class="rounded-full border w-4 h-4 border-grey shadow-inner bg-white shadow"></span>
       <% end %>
@@ -114,9 +114,19 @@
       <span class="ml-2">Receive a weekly email report every Monday</span>
     <% end %>
   </div>
-  <div class="text-sm text-grey-darker mt-6">
-    Configured email: <%= @conn.assigns[:current_user].email %>
-  </div>
+  <%= if @report_changeset do %>
+    <div class="my-4 border-b border-grey-light"></div>
+    <div class="text-sm text-grey-darker mt-6">
+      <%= form_for @report_changeset, "/sites/#{@site.domain}/email-report", [class: "max-w-xs"], fn f -> %>
+        <div class="my-4">
+          <%= label f, :email, "Email address", class: "block text-grey-darker text-sm font-bold mb-2" %>
+          <%= email_input f, :email, class: "transition bg-grey-lighter appearance-none border border-transparent rounded w-full p-2 text-grey-darker leading-normal appearance-none focus:outline-none focus:border-grey-light" %>
+          <%= error_tag f, :email %>
+        </div>
+        <%= submit "Set email address", class: "button mt-2" %>
+      <% end %>
+    </div>
+  <% end %>
 </div>
 
 <%= form_for @conn, "/", [class: "bg-white max-w-md mx-auto shadow-md rounded rounded-t-none border-t-2 border-indigo-lightest px-8 pt-6 pb-8 mb-4 mt-16"], fn f -> %>
