--- a/lib/plausible_web/templates/layout/_tracking.html.eex
+++ b/lib/plausible_web/templates/layout/_tracking.html.eex
@@ -1,10 +1,10 @@
-<%= if Mix.env() == :prod && !@conn.assigns[:skip_plausible_tracking] do %>
+<%= if !@conn.assigns[:skip_plausible_tracking] do %>
     <script>
       (function (w,d,s,o,f,js,fjs) {
       w[o] = w[o] || function () { (w[o].q = w[o].q || []).push(arguments) };
       js = d.createElement(s), fjs = d.getElementsByTagName(s)[0];
       js.id = o; js.src = f; js.async = 1; fjs.parentNode.insertBefore(js, fjs);
-      }(window, document, 'script', 'plausible', 'https://plausible.io/js/p.js'));
+      }(window, document, 'script', 'plausible', 'http://localhost:8000/js/p.js'));
 
       plausible('page')
     </script>\
