--- a/lib/plausible_web/templates/stats/operating_systems.html.eex
+++ b/lib/plausible_web/templates/stats/operating_systems.html.eex
@@ -6,10 +6,10 @@
 <div class="my-4 border-b border-grey-light"></div>
 <main class="modal__content">
   <div class="mt-8">
-    <%= for {os, count} <- @operating_systems do %>
+    <%= for {os, count, percentage} <- @operating_systems do %>
       <div class="flex items-center justify-between my-2">
         <span><%= os %></span>
-        <span><%= count %></span>
+        <span tooltip="<%= count %> visitors"><%= percentage %>%</span>
       </div>
       <%= bar(count, @operating_systems, :blue) %>
     <% end %>
