--- a/lib/plausible_web/templates/stats/operating_systems_preview.html.eex
+++ b/lib/plausible_web/templates/stats/operating_systems_preview.html.eex
@@ -4,10 +4,10 @@
 </div>
 
 <div class="mt-8">
-  <%= for {key, count} <- @operating_systems do %>
+  <%= for {key, count, percentage} <- @operating_systems do %>
     <div class="flex items-center justify-between my-2">
       <span class="truncate" style="max-width: 80%;"><%= key %></span>
-      <span title="<%= count %>"><%= large_number_format(count) %></span>
+      <span tooltip="<%= count %> visitors"><%= percentage %>%</span>
     </div>
     <%= bar(count, @operating_systems, :blue) %>
   <% end %>
