Update welcome email

--- a/lib/plausible_web/templates/email/welcome_email.html.eex
+++ b/lib/plausible_web/templates/email/welcome_email.html.eex
@@ -1,17 +1,16 @@
 Hey <%= user_salutation(@user) %>,
 <br /><br />
-I'm building Plausible to help create a more ethical approach to tracking website visitors. I'm super excited to
-have you on board, hopefully you'll love the simple stats.
+I'm building Plausible to provide a simple and ethical approach to tracking website visitors. I'm super excited to
+have you on board!
 <br /><br />
-The hardest part about building this product is getting the word out there. I'm a solo developer with no
-marketing budget, trying to make this business work. With your help, I might be able to go full-time on
-Plausible soon.
+The hardest part about building this product is getting the word out there. I'm a solo developer without
+a marketing budget, trying to make this business work. With your help, I might be able to go full-time soon.
 <br /><br />
 If you could share why you switched to Plausible with your friends, it would really help me out a lot.
 Truly, a single tweet or a blog post could make a huge difference for a small project like this.
 Would you be up for this?
 <br /><br />
-PS: Also check out our <a href="https://feedback.plausible.io/">collaborative roadmapping tool</a>. If you have any feature request, you can raise them there.
+PS: Also check out our <a href="https://feedback.plausible.io/">collaborative roadmapping tool</a>. If you have any feature requests, you can raise them there.
 <br /><br />
 Thanks,<br />
 Uku Taht,<br />
